--- a/sorpresa.html
+++ b/sorpresa.html
@@ -10,15 +10,15 @@
       margin: 0;
       font-family: 'Poppins', sans-serif;
       background: radial-gradient(circle at top, #f5dcff 0%, #e6c6ff 50%, #d4b1ff 100%);
-      overflow: hidden;
+      overflow-x: hidden;
       color: #4b1c72;
       text-align: center;
     }
 
     h1 {
-      font-size: 3.5em;
+      font-size: 3em;
       margin-top: 40px;
-      letter-spacing: 3px;
+      letter-spacing: 2px;
       animation: float 3s ease-in-out infinite;
       color: #a36bff;
       text-shadow: 2px 2px #fff;
@@ -29,11 +29,11 @@
       50% { transform: translateY(-10px); }
     }
 
-    /* Globos laterales */
+    /* Globos */
     .balloon {
       position: absolute;
-      width: 80px;
-      height: 100px;
+      width: 70px;
+      height: 90px;
       border-radius: 50%;
       background: radial-gradient(circle at 30% 30%, #fff, #b689ff);
       animation: rise 8s infinite ease-in-out;
@@ -77,7 +77,7 @@
       100% { transform: translateY(100vh) rotate(360deg); }
     }
 
-    /* Carta en forma de tarta */
+    /* Carta */
     .cake {
       position: relative;
       margin: 80px auto;
@@ -124,26 +124,58 @@
     }
 
     .message {
-      font-size: 1.2em;
+      font-size: 1.1em;
       color: #4b1c72;
       line-height: 1.5;
       padding: 10px;
     }
 
-    /* Botón música */
-    #music-btn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
+    /* Pregunta */
+    .question {
+      margin: 40px 0;
+      font-size: 1.3em;
+      font-weight: 600;
+    }
+
+    input {
+      border: 2px solid #a36bff;
+      border-radius: 10px;
+      padding: 8px 15px;
+      font-size: 1em;
+      text-align: center;
+      outline: none;
+    }
+
+    button#answer-btn {
       background: #a36bff;
       color: #fff;
       border: none;
-      border-radius: 50px;
-      padding: 10px 20px;
+      border-radius: 10px;
+      padding: 8px 15px;
       font-size: 1em;
       cursor: pointer;
+      margin-left: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      z-index: 10;
+    }
+
+    /* Emojis llorando */
+    .cry {
+      position: absolute;
+      font-size: 2em;
+      animation: cryfall linear infinite;
+    }
+
+    @keyframes cryfall {
+      0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+      100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      h1 { font-size: 2em; }
+      .cake { width: 90%; margin: 40px auto; }
+      .message { font-size: 1em; }
+      .question { font-size: 1.1em; }
     }
   </style>
 </head>
@@ -157,12 +189,12 @@
   <div class="balloon b3"></div>
   <div class="balloon b4"></div>
 
-  <!-- Carta / tarta -->
+  <!-- Carta -->
   <div class="cake">
     <div class="flame"></div>
     <div class="message">
-      <!-- ✨ TU MENSAJE AQUÍ ✨ -->
-      YA LLEGO EL DIA TAN ESPERADO VIDAAAAAAAA Y ES QUE AAAAAAAAAAAAAAAAAAAA
+      💜 YA LLEGÓ EL DÍA TAN ESPERADO, MI VIDA 💜<br><br>
+      ES QUE AAAAAAAAAAAAAAAAAAAA
 	  AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 	  Te me haces mayooooooor mi yaya hermosa ajajasjajs !!!!
 	  Mi amor, gracias por llenar mi vida con tu simple existencia
@@ -177,33 +209,29 @@
     </div>
   </div>
 
+  <!-- Pregunta interactiva -->
+  <div class="question">
+    ¿Cuántos cumples?
+    <input type="number" id="age" min="1" placeholder="Escribe aquí">
+    <button id="answer-btn">💜 Enviar</button>
+  </div>
+
   <!-- Música -->
   <audio id="bg-music" loop autoplay>
     <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2b9bfb6a91.mp3?filename=happy-birthday-125906.mp3" type="audio/mpeg">
   </audio>
 
-  <button id="music-btn">⏸️ Pausar música</button>
-
   <script>
-    // Música automática
     const music = document.getElementById("bg-music");
-    const btn = document.getElementById("music-btn");
-    let playing = true;
 
-    btn.addEventListener("click", () => {
-      if (playing) {
-        music.pause();
-        btn.textContent = "▶️ Reproducir música";
-      } else {
-        music.play();
-        btn.textContent = "⏸️ Pausar música";
-      }
-      playing = !playing;
+    // Forzar autoplay al tocar la pantalla
+    window.addEventListener("click", () => {
+      if (music.paused) music.play();
     });
 
-    // Confeti animado
+    // Confeti inicial
     const colors = ["#d4b1ff", "#f5dcff", "#ffb3f6", "#e6c6ff", "#b689ff"];
-    for (let i = 0; i < 120; i++) {
+    for (let i = 0; i < 100; i++) {
       const confetti = document.createElement("div");
       confetti.classList.add("confetti");
       confetti.style.background = colors[Math.floor(Math.random() * colors.length)];
@@ -215,10 +243,35 @@
       document.body.appendChild(confetti);
     }
 
-    // Intentar forzar autoplay si está bloqueado
-    window.addEventListener("click", () => {
-      if (music.paused) {
-        music.play();
+    // Lógica de la pregunta
+    const btn = document.getElementById("answer-btn");
+    btn.addEventListener("click", () => {
+      const age = document.getElementById("age").value.trim();
+      if (age === "21") {
+        window.location.href = "sorpresa2.html";
+      } else {
+        // Multiplicar la pregunta por toda la pantalla
+        for (let i = 0; i < 20; i++) {
+          const q = document.createElement("div");
+          q.textContent = "¿Cuántos cumples?";
+          q.style.position = "absolute";
+          q.style.left = Math.random() * 100 + "vw";
+          q.style.top = Math.random() * 100 + "vh";
+          q.style.color = "#a36bff";
+          q.style.fontWeight = "bold";
+          q.style.fontSize = "1.2em";
+          q.style.opacity = 0.8;
+          document.body.appendChild(q);
+        }
+        // Lluvia de emojis llorando 😭
+        for (let i = 0; i < 30; i++) {
+          const cry = document.createElement("div");
+          cry.classList.add("cry");
+          cry.textContent = "😭";
+          cry.style.left = Math.random() * 100 + "vw";
+          cry.style.animationDuration = 3 + Math.random() * 3 + "s";
+          document.body.appendChild(cry);
+        }
       }
     });
   </script>
