--- a/sorpresa2.html
+++ b/sorpresa2.html
@@ -109,10 +109,13 @@
 <body>
 
   <h1>🎆 ¡FELIZ CUMPLEAÑOS, MI AMOR! 🎂</h1>
-  <h2>💜 Que se cumplan todos tus sueños 💜</h2>
+  <h2>💜Espero te gustara esto"[En unas horas te 
+  dare alguna otra cosita mas que me queda pendiente
+  por darte solo queria darte esto,o que pudieses acceder desde el
+  minuto 0 de tu dia especial sjsjsjs,en verdad espero te guste amor]"💜</h2>
 
   <audio id="bg-music" loop autoplay>
-    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2b9bfb6a91.mp3?filename=happy-birthday-125906.mp3" type="audio/mpeg">
+    <source src="https://pixabay.com/es/sound-effects/happy-birthday-to-you-bossa-nova-style-arrangement-21399/" type="audio/mpeg">
   </audio>
 
   <button id="music-btn">⏸️ Pausar música</button>
